--- a/configs/nginx/nginx.dev.conf
+++ b/configs/nginx/nginx.dev.conf
@@ -7,8 +7,8 @@ http {
   client_max_body_size 1024M;
   proxy_read_timeout 1d;
 
-  ssl_certificate     /etc/letsencrypt/live/moh.org.bw/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/moh.org.bw/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/hie.paperless.co.ke/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/hie.paperless.co.ke/privkey.pem;
 
   ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers         HIGH:!aNULL:!MD5;
@@ -25,7 +25,7 @@ http {
 
   server {
     listen              443 ssl;
-    server_name         moh.org.bw;
+    server_name         hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;
@@ -39,7 +39,7 @@ http {
 
   server {
     listen              443 ssl;
-    server_name         core.moh.org.bw;
+    server_name         core.hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;
@@ -53,7 +53,7 @@ http {
 
   server {
     listen              443 ssl;
-    server_name         openhim.moh.org.bw;
+    server_name         openhim.hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;
@@ -70,7 +70,7 @@ http {
   # Mediators:
   server {
     listen              443 ssl;
-    server_name         shr.moh.org.bw;
+    server_name         shr.hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;
@@ -86,7 +86,7 @@ http {
   
   server {
     listen              443 ssl;
-    server_name         opencr.moh.org.bw;
+    server_name         opencr.hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;  
@@ -101,7 +101,7 @@ http {
 
   server {
     listen              443 ssl;
-    server_name         hl72fhir.moh.org.bw;
+    server_name         hl72fhir.hie.paperless.co.ke;
 
     location / {
       resolver 127.0.0.11 valid=30s;  
