--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     labels:
     - 'traefik.enable=true'
     - 'traefik.docker.network=hie-botswana_hie'
-    - "traefik.http.routers.api.rule=Host(`traefik.moh.org.bw`)"
+    - "traefik.http.routers.api.rule=Host(`traefik.hie.paperless.co.ke`)"
     - "traefik.http.routers.api.service=api@internal"
     - 'traefik.http.routers.api.tls=true'
     - 'traefik.http.routers.api.entrypoints=web-secure'
@@ -45,7 +45,7 @@ services:
   certbot:
     image: certbot/dns-route53
     container_name: certbot
-    entrypoint: "certbot certonly -n --agree-tos --email pmanko@uw.edu -d 'moh.org.bw' -d '*.moh.org.bw' --dns-route53 --preferred-challenges=dns"
+    entrypoint: "certbot certonly -n --agree-tos --email thomas@tiberbu.com -d 'hie.paperless.co.ke' -d '*.hie.paperless.co.ke' --dns-route53 --preferred-challenges=dns"
     environment:
     - AWS_ACCESS_KEY_ID
     - AWS_SECRET_ACCESS_KEY
@@ -77,7 +77,7 @@ services:
       - 'traefik.http.routers.opencr.tls=true'
       - 'traefik.http.routers.opencr.entrypoints=web-secure'
       - 'traefik.http.services.opencr.loadbalancer.server.port=3000'
-      - 'traefik.http.routers.opencr.rule=Host(`opencr.moh.org.bw`)'
+      - 'traefik.http.routers.opencr.rule=Host(`opencr.hie.paperless.co.ke`)'
   opencr-fhir:
     image: hapiproject/hapi:latest
     container_name: opencr-fhir
@@ -180,14 +180,14 @@ services:
       - 'traefik.http.routers.openhim-api.service=openhim-api'
       - 'traefik.http.routers.openhim-api.tls=true'
       - 'traefik.http.routers.openhim-api.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-api.rule=Host(`core.moh.org.bw`)'
+      - 'traefik.http.routers.openhim-api.rule=Host(`core.hie.paperless.co.ke`)'
       
       - 'traefik.http.services.openhim-core.loadbalancer.server.port=5000'
       - 'traefik.http.services.openhim-core.loadbalancer.server.scheme=https'
       - 'traefik.http.routers.openhim-core.service=openhim-core'
       - 'traefik.http.routers.openhim-core.tls=true'
       - 'traefik.http.routers.openhim-core.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-core.rule=Host(`openhim.moh.org.bw`)'
+      - 'traefik.http.routers.openhim-core.rule=Host(`openhim.hie.paperless.co.ke`)'
     ports:
       - 5001:5001
       - 8091:8080
@@ -209,7 +209,7 @@ services:
       - 'traefik.docker.network=hie-botswana_hie'
       - 'traefik.http.routers.openhim-console.tls=true'
       - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-console.rule=Host(`moh.org.bw`)'
+      - 'traefik.http.routers.openhim-console.rule=Host(`hie.paperless.co.ke`)'
     networks:
       - hie
 
@@ -246,7 +246,7 @@ services:
       - 'traefik.docker.network=hie-botswana_hie'
       - 'traefik.http.routers.converter.tls=true'
       - 'traefik.http.routers.converter.entrypoints=web-secure'
-      - 'traefik.http.routers.converter.rule=Host(`converter.moh.org.bw`)'
+      - 'traefik.http.routers.converter.rule=Host(`converter.hie.paperless.co.ke`)'
 
   # Kafka
   zookeeper:
@@ -294,7 +294,7 @@ services:
       - 'traefik.docker.network=hie-botswana_hie'
       - 'traefik.http.routers.omang.tls=true'
       - 'traefik.http.routers.omang.entrypoints=web-secure'
-      - 'traefik.http.routers.omang.rule=Host(`omang.moh.org.bw`)'
+      - 'traefik.http.routers.omang.rule=Host(`omang.hie.paperless.co.ke`)'
     environment:
       - TZ=GMT
  
