fixed network issue

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -33,7 +33,7 @@ services:
       - hie
     labels:
     - 'traefik.enable=true'
-    - 'traefik.docker.network=hie-botswana_hie'
+    - 'traefik.docker.network=hie'
     - "traefik.http.routers.api.rule=Host(`traefik.hie.paperless.co.ke`)"
     - "traefik.http.routers.api.service=api@internal"
     - 'traefik.http.routers.api.tls=true'
@@ -73,7 +73,7 @@ services:
       - ./configs/opencr/mediator.json:/src/server/config/mediator.json
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=hie-botswana_hie'
+      - 'traefik.docker.network=hie'
       - 'traefik.http.routers.opencr.tls=true'
       - 'traefik.http.routers.opencr.entrypoints=web-secure'
       - 'traefik.http.services.opencr.loadbalancer.server.port=3000'
@@ -173,7 +173,7 @@ services:
     #   - ./configs/openhim/config.json:/app/config/default.json
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=hie-botswana_hie'
+      - 'traefik.docker.network=hie'
       
       - 'traefik.http.services.openhim-api.loadbalancer.server.port=8080'
       - 'traefik.http.services.openhim-api.loadbalancer.server.scheme=https'
@@ -206,7 +206,7 @@ services:
       retries: 3
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=hie-botswana_hie'
+      - 'traefik.docker.network=hie'
       - 'traefik.http.routers.openhim-console.tls=true'
       - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
       - 'traefik.http.routers.openhim-console.rule=Host(`hie.paperless.co.ke`)'
@@ -243,7 +243,7 @@ services:
       - hie
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=hie-botswana_hie'
+      - 'traefik.docker.network=hie'
       - 'traefik.http.routers.converter.tls=true'
       - 'traefik.http.routers.converter.entrypoints=web-secure'
       - 'traefik.http.routers.converter.rule=Host(`converter.hie.paperless.co.ke`)'
@@ -291,7 +291,7 @@ services:
       - hie
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=hie-botswana_hie'
+      - 'traefik.docker.network=hie'
       - 'traefik.http.routers.omang.tls=true'
       - 'traefik.http.routers.omang.entrypoints=web-secure'
       - 'traefik.http.routers.omang.rule=Host(`omang.hie.paperless.co.ke`)'
