--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SHR_VERSION=v0.7.1
 FHIR_CONVERTER_VERSION=v3.2.1
 OMANG_SVC_VERSION=v1.6.3
+AWS_ACCESS_KEY_ID=AKIASWRE4ITQVT73UMPB
+AWS_SECRET_ACCESS_KEY=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
