Changed docker network config4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./configs/traefik/traefik.yml:/etc/traefik/traefik.yml
       - ./configs/traefik/certs.yml:/etc/traefik/dynamic_conf/certs.yml
-      - certs:/etc/certs
-    # networks:
-    #   - hie-kenya_hie
+      - certs:/etc/letsencrypt
+    networks:
+      - hie-kenya_default
     labels:
     - 'traefik.enable=true'
-    # - 'traefik.docker.network=hie-kenya_hie'
+    - 'traefik.docker.network=hie-kenya_default'
     - "traefik.http.routers.api.rule=Host(`traefik.hie.paperless.co.ke`)"
     - "traefik.http.routers.api.service=api@internal"
     - 'traefik.http.routers.api.tls=true'
@@ -53,7 +53,7 @@ services:
     - certs:/etc/letsencrypt
     - letsencrypt:/var/lib/letsencrypt
     # networks:
-    # - hie-kenya_hie
+    # - hie-kenya_default
 
 
   ###
@@ -73,14 +73,14 @@ services:
       interval: 20s
       timeout: 20s
       retries: 2
-    # networks:
-    #   - hie-kenya_hie
+    networks:
+      - hie-kenya_default
     volumes:
       - ./configs/openhim/healthcheck.js:/healthcheck.js
     #   - ./configs/openhim/config.json:/app/config/default.json
     labels:
       - 'traefik.enable=true'
-      # - 'traefik.docker.network=hie-kenya_hie'
+      - 'traefik.docker.network=hie-kenya_default'
       
       - 'traefik.http.services.openhim-api.loadbalancer.server.port=8080'
       - 'traefik.http.services.openhim-api.loadbalancer.server.scheme=https'
@@ -113,12 +113,12 @@ services:
       retries: 3
     labels:
       - 'traefik.enable=true'
-      # - 'traefik.docker.network=hie-kenya_hie'
+      - 'traefik.docker.network=hie-kenya_default'
       - 'traefik.http.routers.openhim-console.tls=true'
       - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
       - 'traefik.http.routers.openhim-console.rule=Host(`hie.paperless.co.ke`)'
     # networks:
-    #   - hie-kenya_hie
+    #   - hie-kenya_default
 
   # Loads Default OpenHIM Config
   openhim-config:
@@ -126,8 +126,8 @@ services:
     image: ghcr.io/i-tech-uw/openhim-config:v0.0.0
     volumes:
       - ./configs/openhim/test-openhim-config.json:/app/test-openhim-config.json
-    # networks:
-    #   - hie-kenya_hie
+    networks:
+      - hie-kenya_default
 
   mongo-db:
     container_name: mongo-db
@@ -135,8 +135,8 @@ services:
     volumes:
       - "mongo-data:/data/db"
     restart: unless-stopped
-    # networks:
-    #   - hie-kenya_hie
+    networks:
+      - hie-kenya_default
 
   fhir-converter:
     container_name: fhir-converter
@@ -146,11 +146,11 @@ services:
     volumes:
       - ./configs/fhir-converter/config.json:/app/config.json
       - /app/src/service-templates
-    # networks:
-    #   - hie-kenya_hie
+    networks:
+      - hie-kenya_default
     labels:
       - 'traefik.enable=true'
-      # - 'traefik.docker.network=hie-kenya_hie'
+      - 'traefik.docker.network=hie-kenya_default'
       - 'traefik.http.routers.converter.tls=true'
       - 'traefik.http.routers.converter.entrypoints=web-secure'
       - 'traefik.http.routers.converter.rule=Host(`converter.hie.paperless.co.ke`)'
@@ -163,8 +163,8 @@ services:
     hostname: zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
-    # networks:
-    # - hie-kenya_hie
+    networks:
+    - hie-kenya_default
     volumes:
       - /data
   kafka:
@@ -183,8 +183,8 @@ services:
       - kafka-data:/bitnami/kafka
     depends_on:
       - zookeeper
-    # networks:
-    # - hie-kenya_hie
+    networks:
+    - hie-kenya_default
     entrypoint: sh -c 'sleep 30 && /opt/bitnami/scripts/kafka/entrypoint.sh /opt/bitnami/scripts/kafka/run.sh' # prevent zookeeper conflict error
   
   oracle-db:
@@ -200,8 +200,8 @@ services:
     volumes:
       - ./configs/omang/db:/docker-entrypoint-initdb.d
 
-    # networks:
-    #   - hie-kenya_hie
+    networks:
+      - hie-kenya_default
 volumes:
   es:
     driver: local
